--- a/school/templates/index.html
+++ b/school/templates/index.html
@@ -65,7 +65,7 @@
                         <td>{{i.email}}</td>
                         <td>
                             <a href="#editEmployeeModal-{{forloop.counter}}" class="edit" data-toggle="modal"><i class="material-icons" data-toggle="tooltip" title="Edit">&#xE254;</i></a>
-                            <a href="#deleteEmployeeModal" class="delete" data-toggle="modal"><i class="material-icons" data-toggle="tooltip" title="Delete">&#xE872;</i></a>
+                            <a href="#deleteEmployeeModal-{{forloop.counter}}" class="delete" data-toggle="modal"><i class="material-icons" data-toggle="tooltip" title="Delete">&#xE872;</i></a>
                         </td>
                     </tr>
 					{% endfor %}					
@@ -169,7 +169,8 @@
 	</div>
 	{% endfor %}
 	<!-- Delete Modal HTML -->
-	<div id="deleteEmployeeModal" class="modal fade">
+	 {% for i in allteachers %}
+	<div id="deleteEmployeeModal-{{forloop.counter}}" class="modal fade">
 		<div class="modal-dialog">
 			<div class="modal-content">
 				<form>
@@ -183,11 +184,13 @@
 					</div>
 					<div class="modal-footer">
 						<input type="button" class="btn btn-default" data-dismiss="modal" value="Cancel">
-						<input type="submit" class="btn btn-danger" value="Delete">
+						<!-- <input type="submit" class="btn btn-danger" value="Delete"> -->
+						 <a type="submit" class="btn btn-danger" href="{% url 'delete' i.id %}">Delete</a>
 					</div>
 				</form>
 			</div>
 		</div>
 	</div>
+	{% endfor %}
 </body>
 </html>
