--- a/school/templates/index.html
+++ b/school/templates/index.html
@@ -156,7 +156,7 @@
 						</div>	
 						<div class="form-group">
 							<label>Image</label>
-							<input name="image" type="file"  class="form-control" required>
+							<input name="image" type="file"  class="form-control">
 						</div>				
 					</div>
 					<div class="modal-footer">
